[package]
name = "web3-token"
version = "0.1.0"
description = "Solana token program built with Anchor framework"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "web3_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
tokio = "1.35"
